# weread2notion

./: .gitignore  README.md  Scriptable.js  action.yml  config.py  default.ini  main.py  note.json  pyproject.toml  requirements.txt  secrets.txt  sync.py  test.sh  weread.py
.github/workflows/: weread.yml  weread2.yml
api/: notion.py  weread.py
scripts/: readwise.py  utils.py  weread.py
src/weread2notion/: __init__.py  blocks.py  cli.py
